--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,14 @@ textarea {
    =========================================================================
    = */
 
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
+/*---------------------BASE HEADER-----*/
+
+
 header,
 footer {
     display: flex;
@@ -96,80 +104,220 @@ footer {
     flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  margin: 0:auto;
+
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+
+}
+
+
 header nav {
     display: flex;
-    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+    width: 60%;
 }
+
+
 
 header nav ul {
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
 
 }
+
+footer .contact {
+  margin-bottom: 50px;
+
+}
+
+footer .social {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+footer .copyright {
+  margin: 20px 0;
+
+}
+
+
+
+/*-------------------Mobile Styles - Homepage ------*/
+
+/*--HERO AREA--*/
+
 
 .hero-area {
   display: flex;
+  justify-content: center;
   flex-flow: row nowrap;
 }
 
-.aside {
+/* ASIDE */
+
+aside {
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 
 }
+
+
+
+/*  FEATURES */
 
 .features {
   display: flex;
+  justify-content: center;
   flex-flow: row wrap;
 
 }
 
-.features feature-items {
+.features h2 {
+  margin-bottom: 60px;
+
+}
+
+.features article  {
+  width: 63%;
+  margin: 30px 0;
+
+}
+
+.features .features-items {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
-
 }
+
+.features p {
+  margin: 0;
+}
+
+/*----/* REVIEWs  */
+
 
 .reviews {
   display: flex;
+  width: 75%;
   flex-flow: row wrap;
 
 }
 
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
+}
+
+/*============ABOUT=====*/
+
 .mission {
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 
 }
 
 .contact-section {
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
+
+.contact-content p {
+  margin: 0;
+
+}
+
+/*===FAQ=====*/
+
 
 .faq {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
 
-.faq content-wrapper {
+.faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+
+}
+
+.faq-content {
+  margin-bottom: 50px;
 
 }
 
 
 
-footer .social p {
-  display: flex;
-  flex-flow: row nowrap;
-}
 
 
-footer .social-icons {
-  display: flex;
-  flex-flow: row nowrap;
-}
+
+
+
+
+
+
+
+
+
 
 
 
